--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="theme-color" content="#000000">
 
-        <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-        <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+        <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json"> -->
         <link rel="stylesheet" href="%PUBLIC_URL%/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <title>UETMAN</title>
@@ -17,7 +16,6 @@
         </noscript>
         <div id="root"></div>
         <script src="%PUBLIC_URL%/js/jquery-3.3.1.min.js"></script>
-        <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script> -->
         <script src="%PUBLIC_URL%/js/bootstrap.min.js"></script>
     </body>
 </html>
