--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 
         <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json"> -->
         <link rel="stylesheet" href="%PUBLIC_URL%/css/bootstrap.min.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
         <title>UETMAN</title>
     </head>
     <body>
